<resources>
    <string name="app_name">SPothole</string>
    <string name="bmc_login">BMC Login</string>
    <string name="quote">Potholes are the Mondays in the road of life. Help us remove them.</string>
    <string name="user_login">User Login</string>
    <string name="user_register">User Registration</string>
    <string name="bmc_register">BMC Registration</string>
    <string name="user_signin">Sign In</string>
    <string name="user_signup">Sign Up</string>
    <string name="enter_your_email">Email</string>
    <string name="enter_your_password">Password</string>
    <string name="not_have_a_account_signup_here">Don\'t have an Account? Sign Up for SPothole.</string>
    <string name="already_registered_sign_in_here">Already Registered? Sign In here.</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="id_no">ID No.</string>
    <string name="confirm_your_password">Confirm Password</string>
    <string name="capture_image">Capture Image </string>
    <string name="confirm_upload">Confirm and Upload</string>
    <string name="description">Image not Available</string>
</resources>