<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportPothole"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ReportImage"
        android:layout_width="340dp"
        android:layout_height="520dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#D3D3D3"
        android:contentDescription="@string/description"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/btnCaptureImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <Button
        android:id="@+id/btnCaptureImage"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/button_bg"
        android:onClick="takePicture"
        android:text="@string/capture_image"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/btnUploadImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ReportImage">


    </Button>

    <Button
        android:id="@+id/btnUploadImage"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="42dp"
        android:background="@drawable/button_bg"
        android:text="@string/confirm_upload"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCaptureImage">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>